# llm-zoom

./: .gitignore  hello.py  pyproject.toml  requirements.txt
00-pre-course/: search.py
01/: 01.EnvSetup.ipynb
01-setup/: 01.EnvSetup.py
